# WRO_FE_2026_NATIONAL

./: .gitignore  LICENSE  README.md
cad/car/: car.FCStd
firmware/xlnc_apex_robot/: Cargo.toml  README.md
firmware/xlnc_apex_robot/src/: constants.rs  follower.rs  lib.rs  main.rs
hardware/cad/: apex_national.io  battery-holder.3mf  battery.FCStd  car.FCStd  motor-adapter.3mf  motor-holder.3mf  motor.FCStd  otos-adapter.3mf  otos.FCStd  perfboard-holder.3mf  perfboard.FCStd  pixy_2_case.3mf  servo-adapter.3mf  servo-holder-holder.3mf  servo-holder.3mf  servo-holder.FCStd  servo.FCStd  servo_adapter.FCStd  tof-case.3mf  tof-cover.3mf  tof.FCStd
hardware/schematics/car/: car.kicad_pcb  car.kicad_prl  car.kicad_pro  car.kicad_sch  fp-lib-table  sym-lib-table
