[package]
name = "xlnc_apex_robot"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
# Cortex-M 
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

# Panic Handler
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Embassy
embassy-executor = { version = "0.10", features = [
  "platform-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-time = { version = "0.5.1" }
embassy-rp = { version = "0.10.0", features = [
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
  "defmt",
] }
pixy2 = {path = "/mnt/mediafiles/Media/Code/robotics/wro/pico2/crates/lib/pixy2"}

# Defmt Logging
defmt = "1.1.0"
defmt-rtt = "1.2.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
