[package]
name = "xlnc_apex_robot"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
# Cortex-M 
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

# Panic Handler
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Embassy
embassy-executor = { version = "0.10", features = [
  "platform-cortex-m",
  "executor-thread",
  "defmt",
] }
embassy-time = { version = "0.5.1" }
embassy-rp = { version = "0.10.0", features = [
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
  "defmt",
] }

# Defmt Logging
defmt = "1.1.1"
defmt-rtt = "1.3.0"
pixy2 = { git = "https://github.com/XLNC-APEX/pixy2.git", version = "0.1.0", features = ["defmt"] }
sparkfun-otos = { git = "https://github.com/XLNC-APEX/sparkfun-otos.git", version = "0.1.0", features = ["defmt"] }
vl53l0x = { git = "https://github.com/XLNC-APEX/vl53l0x.git", version = "1.0.1" }
embassy-embedded-hal = "0.6.0"
static_cell = "2.1.1"
embassy-sync = "0.8.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
tb6612fng = "1.0.0"
map-range = { version = "0.1.2", default-features = false }
tinytones = "0.1.0"

[dev-dependencies]
gnuplot = "0.0.46"
